--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,39 @@ footer ul li:nth-child(3) {
 footer ul li:nth-child(4) {
   order: 1
 }
+
+@media screen and (max-width: 600px) {
+
+  header {
+    justify-content: center;
+  }
+
+  header nav {
+    display: none;
+  }
+
+  .hero h1 {
+    font-size: 1.8em;
+  }
+
+  .hero h3 {
+    font-size: 1.1em;
+  }
+
+  .know-the-hotel .grid li.small {
+    flex-basis: 100%;
+  }
+
+  .know-the-hotel .grid li.large {
+    flex-basis: 100%;
+  }
+
+  .features .grid {
+    flex-direction: column;
+  }
+
+  .newsletter form button {
+    margin-top: 20px;
+  }
+
+}
