--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,9 @@ nav, ul {
 }
 
 .hero {
-  background-image: url(images/hero.jpg);
+  background-image: url(images/venha);
   background-size: cover;
-  min-height: 100vh;
+  min-height: 80vh;
   color: white;
   text-align: center;
   display: flex;
@@ -75,7 +75,7 @@ nav, ul {
   background-color: white;
   border-radius: 4px;
   color: #191c03;
-  padding: 20px 50px;
+  padding: 30px 50px;
   text-transform: uppercase;
 }
 
@@ -262,38 +262,23 @@ footer p {
   text-align: center;
 }
 
-footer ul li:nth-child(1) {
-  order: 4;
-}
-
-footer ul li:nth-child(2) {
-  order: 3;
-}
-
-footer ul li:nth-child(3) {
-  order: 2;
-}
-
-footer ul li:nth-child(4) {
-  order: 1
-}
-
 @media screen and (max-width: 600px) {
-
-  header {
-    justify-content: center;
-  }
 
   header nav {
     display: none;
   }
 
+  header a {
+   margin-left: auto;
+   margin-right: auto;
+  }
+
   .hero h1 {
-    font-size: 1.8em;
+    font-size: 2.5em;
   }
 
   .hero h3 {
-    font-size: 1.1em;
+    font-size: 1.3em;
   }
 
   .know-the-hotel .grid li.small {
